--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
         <img id="framework" width="70%" src="static/images/overview.jpg">
         <h3 class="has-text-centered">
           <div class="content has-text-justified">
+          <br>
           <p>
             GR-1 is first pre-trained on the task of video prediction with a large-scale video dataset.
             It is then finetuned on robot data to learn multi-task visual robot manipulation.
@@ -219,32 +220,33 @@
         <h3 class="has-text-centered">
           <div class="content has-text-justified">
           <p>
-            [CALVIN](http://calvin.cs.uni-freiburg.de/) is a challenging benchmark fosuing on learning language-conditioned policy for long-horizon robot manipulation.
+            <br>
+            <a href="http://calvin.cs.uni-freiburg.de/"><b>CALVIN</b></a> is a challenging benchmark fosuing on learning language-conditioned policy for long-horizon robot manipulation.
             It contains 34 tasks and 4 different environments A, B, C, and D.
-            We perform experiments on CALVIN in four settings
-              1) Long-Horizon Multi-Task Learning 
-              2) Zero-Shot Generalization to Unseen Scenes 
-              3) Small Data 
-              4) Zero-Shot Generalization to Unseen Languages
-            
-            Long-Horizon Multi-Task Learning (ABCD->D)
+            We perform experiments on CALVIN in four settings<br>
+            &nbsp; 1). Long-Horizon Multi-Task Learning <br>
+            &nbsp; 2). Zero-Shot Generalization to Unseen Scenes <br>
+            &nbsp; 3). Small Data <br>
+            &nbsp; 4). Zero-Shot Generalization to Unseen Languages <br>
+            <br>
+            <b>Long-Horizon Multi-Task Learning (ABCD->D)</b> <br>
             In this setting, the robot is trained with data collected from environments A, B, C, and D and evaluated in environment D.
             During the evaluation, the robot is instructed to perform 5 tasks in a row. 
-            This helps evaluate the capability of long-horizon multi-tasking.
-
-            Zero-Shot Generalization to Unseen Scenes (ABC->D)
-            The robot is trained with data collected from environment A, B, and C and evaluated in environment D, which is unseen during training.
-            
-            Small Data
+            This helps evaluate the capability of long-horizon multi-tasking.<br>
+            <br>
+            <b>Zero-Shot Generalization to Unseen Scenes (ABC->D)</b><br>
+            The robot is trained with data collected from environment A, B, and C and evaluated in environment D, which is unseen during training.<br>
+            <br>
+            <b>Small Data</b><br>
             Robot data is expensive.
             To evaluate the capability of learning from small data, we sample 10% data from the training data of the ABCD->D split for training.
-            Specifically, we sampled 66 trajectories for each of the 34 tasks, i.e. 2244 trajectories in total.
-
-            Zero-Shot Generalization to Unseen Languages
-            We use GPT-4 to generate 50 synonymous instructions for each of the 34 tasks and randomly sampled from them during evaluation.
-
+            Specifically, we sampled 66 trajectories for each of the 34 tasks, i.e. 2244 trajectories in total.<br>
+            <br>
+            <b>Zero-Shot Generalization to Unseen Languages</b><br>
+            We use GPT-4 to generate 50 synonymous instructions for each of the 34 tasks and randomly sampled from them during evaluation.<br>
+            <br>
             GR-1 showcases strong performance and outperforms the baseline methods in all four settings.
-            In particular, GR-1 shows powerful zero-shot generealization capability and possesses strong data efficiency.
+            In particular, GR-1 shows powerful zero-shot generealization capability and possesses strong data efficiency.<br>
           </p>
         </div>
         </h3>
@@ -263,6 +265,7 @@
         <img id="robot_result" width="70%" src="static/images/real_robot_results.png">
         <h3 class="has-text-centered">
           <div class="content has-text-justified">
+          <br>
           <p>
           We also performs real robot experiments on object transportation and articulated object manipulation to evaluate how GR-1 works in the real world.
           In object transportation, we evaluate on three settings: Seen Objects, Unseen Instances (unseen object instances of seen instances), and Unseen Categories (unseen objects of unseen categories).
