--- a/index.html
+++ b/index.html
@@ -118,21 +118,27 @@
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
-        <div class="item transport_tomato">
-          <video poster="" id="transport_tomato" autoplay controls muted loop playsinline height="100%">
-            <source src="static/videos/transport_tomato.mp4"
+        <div class="item calvin_0">
+          <video poster="" id="calvin_0" autoplay controls muted loop playsinline height="90%">
+            <source src="static/videos/comp/4_ffmpeg.mp4"
                     type="video/mp4">
           </video>
         </div>
-        <div class="item close_drawer">
-          <video poster="" id="close_drawer" autoplay controls muted loop playsinline height="100%">
-            <source src="static/videos/close_drawer.mp4"
+        <div class="item calvin_1">
+          <video poster="" id="calvin_1" autoplay controls muted loop playsinline height="90%">
+            <source src="static/videos/comp/12_ffmpeg.mp4"
                     type="video/mp4">
           </video>
         </div>
-        <div class="item transport_broccoli">
-          <video poster="" id="transport_broccoli" autoplay controls muted loop playsinline height="100%">
-            <source src="static/videos/transport_broccoli.mp4"
+        <div class="item calvin_2">
+          <video poster="" id="calvin_2" autoplay controls muted loop playsinline height="90%">
+            <source src="static/videos/comp/14_ffmpeg.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item calvin_3">
+          <video poster="" id="calvin_3" autoplay controls muted loop playsinline height="90%">
+            <source src="static/videos/comp/19_ffmpeg.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -146,26 +152,26 @@
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item calvin_0">
-          <video poster="" id="calvin_0" autoplay controls muted loop playsinline height="100%">
-            <source src="static/videos/calvin_0.mp4"
+          <video poster="" id="calvin_0" autoplay controls muted loop playsinline height="90%">
+            <source src="static/videos/demo/close_drawer.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item calvin_1">
-          <video poster="" id="calvin_1" autoplay controls muted loop playsinline height="100%">
-            <source src="static/videos/calvin_1.mp4"
+          <video poster="" id="calvin_1" autoplay controls muted loop playsinline height="90%">
+            <source src="static/videos/demo/transport_broccoli.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item calvin_2">
-          <video poster="" id="calvin_2" autoplay controls muted loop playsinline height="100%">
-            <source src="static/videos/calvin_2.mp4"
+          <video poster="" id="calvin_2" autoplay controls muted loop playsinline height="90%">
+            <source src="static/videos/demo/transport_tomato.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item calvin_3">
-          <video poster="" id="calvin_3" autoplay controls muted loop playsinline height="100%">
-            <source src="static/videos/calvin_3.mp4"
+          <video poster="" id="calvin_3" autoplay controls muted loop playsinline height="90%">
+            <source src="static/videos/demo/transport eggplant.mp4"
                     type="video/mp4">
           </video>
         </div>
